# jobradar

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: pipeline.yml  tests.yml
pipeline/: pyproject.toml
pipeline/jobradar_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/pipeline/: config.py  db.py  enrich_rules.py  enrichment.py  main.py  models.py  providers.py  sources.py  tech_filter.py
pipeline/pipeline/sources/: __init__.py  arbeitnow.py  greenhouse.py  hn_hiring.py  protocol.py  remoteok.py  remotive.py  wwr.py
pipeline/tests/: test_enrich_rules.py  test_enrichment.py  test_models.py  test_pipeline.py  test_providers.py  test_sources.py  test_sources_config.py
src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
src/app/job/[id]/: page.tsx
src/app/pipeline/: page.tsx
src/app/trends/: page.tsx
src/components/: BackToFeed.tsx  FeedExplorer.tsx
src/lib/: format.ts  supabase.ts  types.ts
supabase/migrations/: 0001_init.sql
